tests/parser/tests/cases/should_fail/unclosed_string_literal/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:2
1 |   "a
  |    ^^ here
  = note: unclosed string literal
